<resources>
    <string name="app_name">Moodle</string>

    <string name="fragment_welcome_screen_title">Hey Yizhak</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--  bottom navigation  -->
    <string name="home_fragment">home</string>
    <string name="notification_fragment">notification</string>
    <string name="setting_fragment">setting</string>

    <!--  home fragment  -->
    <string name="assignments_title">Assignments</string>
    <string name="courses_title">Courses</string>

    <!--  CreateOrEditCourse  -->
    <string name="dialog_add_or_edit_course_name">Course name</string>
    <string name="dialog_add_or_edit_course_lecturer">Lecturer\'s name</string>
    <string name="dialog_add_or_edit_course_semester">A, B or C</string>
    <string name="dialog_add_or_edit_course_create">Create</string>
    <string name="dialog_add_or_edit_course_update">Update</string>
    <string name="dialog_add_or_edit_course_cancel">Cancel</string>

    <!--  CreateOrEditAssignment  -->
    <string name="dialog_add_or_edit_assignment_name">Assignment name</string>
    <string name="dialog_add_or_edit_assignment_create">Create</string>
    <string name="dialog_add_or_edit_assignment_update">Update</string>
    <string name="dialog_add_or_edit_assignment_cancel">Cancel</string>

</resources>