<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_medium_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_or_create_course_til_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/dialog_add_or_edit_course_name"
        android:inputType="textCapWords"
        app:endIconDrawable="@drawable/ic_baseline_dashboard_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_or_create_course_tid_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_200"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_or_create_course_til_lecturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_or_edit_course_lecturer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_or_create_course_til_name"
        android:layout_marginTop="@dimen/common_small_margin"
        android:inputType="textCapWords"
        app:endIconDrawable="@drawable/ic_baseline_dashboard_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_or_create_course_tid_lecturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_add_or_create_course_til_semester"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_or_edit_course_semester"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_or_create_course_til_lecturer"
        android:layout_marginTop="@dimen/common_small_margin"
        android:inputType="textCapWords"
        app:endIconDrawable="@drawable/ic_baseline_dashboard_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_add_or_create_course_tid_semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_700"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_add_or_create_course_btn_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dialog_add_contact_btn_cancel"
        android:hint="@string/dialog_add_or_edit_course_create"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/primary_color" />

    <Button
        android:id="@+id/dialog_add_contact_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/dialog_add_or_edit_course_cancel"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/error_or_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>
